# dialogur_panel

./: CMakeLists.txt  README.md  package.xml
Kokoro-82M-v1.1-zh/: KokoroTTS.ipynb
launch/: dialogue_panel.launch
plugins/: plugin.xml
resources/: img.qrc.depends
resources/ui/: dialogue_panel.ui  mainwindow.ui
script/: asr.py  setup.py  tts.py  tts_service.py
speech_paraformer-large_asr_nat-zh-cn-16k-common-vocab8404-online/: .gitattributes  .msc  funASR.ipynb  model.pt
src/: KokoroTTS.cpp  KokoroTTS.h  dialogue_panel.cpp  dialogue_panel.h  funASR.cpp  funASR.h  main.cpp  mainwindow.cpp  mainwindow.h  qnchatmessage.cpp  qnchatmessage.h  test_onnx.cpp
srv/: TTS.srv
